Mon Oct 25 01:49:30 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * integration/cruisecontrol/cuts-vc8.config.xml:
        * integration/cruisecontrol/cuts-vc9.config.xml:

          Disabled the build if the previous build failed and there are
          no modifications detected.

Mon Oct 25 01:26:43 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * integration/cruisecontrol/cuts-vc8.config.xml:
        * integration/cruisecontrol/cuts-vc9.config.xml:

          Added a force build project.

Sun Oct 24 23:48:26 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * integration/cruisecontrol/cuts-vc8.config.xml:
        * integration/cruisecontrol/cuts-vc9.config.xml:

          Fixed error in configuration.

Sun Oct 24 22:53:36 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * integration/cruisecontrol/cuts-vc8.config.xml:

          Configuration scripts for vc8 build.

        * integration/cruisecontrol/cuts-vc9.config.xml:

          Updated configuration to use property tags.

Sun Oct 24 22:26:49 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * integration/cruisecontrol:
        * integration/cruisecontrol/cuts-vc9.config.xml:

          Project configuration script for building the vc9 version of
          CUTS using cruisecontrol.

Sun Oct 24 21:27:57 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * integration/_ACE_TAO_CIAO.build:

          Removed obsolete portions of the script.

        * integration/autobuild.build:

          Fixed generalizations in the build script.

        * integration/include/MPC/vc8.build:
        * integration/include/MPC/vc9.build:

          Fixed errors in the build scripts.

Sat Oct 23 22:21:08 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Header_Context_Generator.h: