@@ -116,6 +116,13 @@ xerces3 = 0
 
 xsc = 0
 
+/// @feature
+/// This features controls project that (attempt to) upgrade a
+/// model to the latest version of its paradigm. This should be
+/// used only by the development team when preparing for a release.
+
+gme_upgrade = 0
+
 ///============================================================================
 // DO NOT CHANGE ANYTHING BELOW THIS LINE
 ///============================================================================
