@@ -1,0 +1,29 @@
+// -*- Java -*-
+
+/**
+ * @class SimpleObject
+ *
+ * This is a simple class to illustrate QUOTAS capabilities.
+ */
+class SimpleObject
+{
+  public SimpleObject ()
+  {
+
+  }
+
+  public void printHelloWorld ()
+  {
+    System.out.println ("Hello, World!!");
+  }
+
+  public void printMessage (String msg)
+  {
+    System.out.println (msg);
+  }
+
+  public long addNumbers (long n1, long n2)
+  {
+    return n1 + n2;
+  }
+}
